--- a/data/nginx_test/app.conf
+++ b/data/nginx_test/app.conf
@@ -1,7 +1,7 @@
 
 server {
     listen 80;
-    server_name settlegram.app;
+    server_name test.settlegram.app;
 
     location / {
         return 301 https://$host$request_uri;
@@ -12,7 +12,7 @@ server {
 
 server {
     listen 443 ssl;
-    server_name settlegram.app;
+    server_name test.settlegram.app;
 
     ssl_certificate /etc/letsencrypt/live/test.settlegram.app/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/test.settlegram.app/privkey.pem;
@@ -21,7 +21,7 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
     
     location / {
-        proxy_pass http://settlegram:5000; #for demo purposes
+        proxy_pass http://flask:5000; #for demo purposes
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 	proxy_set_header Host $host;
     }
