--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -22,6 +22,7 @@ services:
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
   settlegram:
     build: ./SettleGram
+    restart: always
     command: python -u main.py
     env_file:
       - ./secrets.env
